[gd_scene load_steps=4 format=2]

[ext_resource path="res://World/GrassBackground.png" type="Texture" id=1]
[ext_resource path="res://PickUpgradeScreen.gd" type="Script" id=2]
[ext_resource path="res://Music and Sounds/PickUpgradeMusic.ogg" type="AudioStream" id=3]

[node name="PickUpgradeScreen" type="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -64.0
margin_top = -48.0
margin_right = 64.0
margin_bottom = 48.0
script = ExtResource( 2 )

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -51.0
margin_top = -42.0
margin_right = 53.0
margin_bottom = 46.0
texture = ExtResource( 1 )
stretch_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -100.0
margin_top = -78.0
margin_right = 100.0
margin_bottom = 78.0

[node name="HBoxContainer" type="VBoxContainer" parent="VBoxContainer"]
margin_right = 200.0
margin_bottom = 50.0
grow_horizontal = 0
grow_vertical = 0
alignment = 1

[node name="Button1" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_right = 200.0
margin_bottom = 14.0
rect_min_size = Vector2( 10, 10 )

[node name="Button2" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_top = 18.0
margin_right = 200.0
margin_bottom = 32.0
rect_min_size = Vector2( 10, 10 )

[node name="Button3" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_top = 36.0
margin_right = 200.0
margin_bottom = 50.0
rect_min_size = Vector2( 10, 10 )

[node name="Panel" type="Panel" parent="VBoxContainer"]
margin_top = 54.0
margin_right = 200.0
margin_bottom = 84.0
rect_min_size = Vector2( 60, 30 )
input_pass_on_modal_close_click = false

[node name="RichTextLabel" type="RichTextLabel" parent="VBoxContainer/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 5.0
margin_top = 5.0
margin_right = -5.0
margin_bottom = -5.0

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 88.0
margin_right = 200.0
margin_bottom = 156.0
alignment = 1

[node name="Row1" type="VBoxContainer" parent="VBoxContainer/HBoxContainer2"]
margin_left = 8.0
margin_right = 98.0
margin_bottom = 68.0

[node name="Upgrade1" type="Panel" parent="VBoxContainer/HBoxContainer2/Row1"]
margin_right = 90.0
margin_bottom = 20.0
rect_min_size = Vector2( 90, 20 )

[node name="RichTextLabel" type="Label" parent="VBoxContainer/HBoxContainer2/Row1/Upgrade1"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 3.0
margin_top = 3.0
margin_right = -3.0
margin_bottom = -3.0
align = 1
valign = 1

[node name="Upgrade2" type="Panel" parent="VBoxContainer/HBoxContainer2/Row1"]
margin_top = 24.0
margin_right = 90.0
margin_bottom = 44.0
rect_min_size = Vector2( 90, 20 )

[node name="RichTextLabel" type="Label" parent="VBoxContainer/HBoxContainer2/Row1/Upgrade2"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 3.0
margin_top = 3.0
margin_right = -3.0
margin_bottom = -3.0
align = 1
valign = 1

[node name="Upgrade3" type="Panel" parent="VBoxContainer/HBoxContainer2/Row1"]
margin_top = 48.0
margin_right = 90.0
margin_bottom = 68.0
rect_min_size = Vector2( 90, 20 )

[node name="RichTextLabel" type="Label" parent="VBoxContainer/HBoxContainer2/Row1/Upgrade3"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 3.0
margin_top = 3.0
margin_right = -3.0
margin_bottom = -3.0
align = 1
valign = 1

[node name="Row2" type="VBoxContainer" parent="VBoxContainer/HBoxContainer2"]
margin_left = 102.0
margin_right = 192.0
margin_bottom = 68.0

[node name="Upgrade4" type="Panel" parent="VBoxContainer/HBoxContainer2/Row2"]
margin_right = 90.0
margin_bottom = 20.0
rect_min_size = Vector2( 90, 20 )

[node name="RichTextLabel" type="Label" parent="VBoxContainer/HBoxContainer2/Row2/Upgrade4"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 3.0
margin_top = 3.0
margin_right = -3.0
margin_bottom = -3.0
align = 1
valign = 1

[node name="Upgrade5" type="Panel" parent="VBoxContainer/HBoxContainer2/Row2"]
margin_top = 24.0
margin_right = 90.0
margin_bottom = 44.0
rect_min_size = Vector2( 90, 20 )

[node name="RichTextLabel" type="Label" parent="VBoxContainer/HBoxContainer2/Row2/Upgrade5"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 3.0
margin_top = 3.0
margin_right = -3.0
margin_bottom = -3.0
align = 1
valign = 1

[node name="Upgrade6" type="Panel" parent="VBoxContainer/HBoxContainer2/Row2"]
margin_top = 48.0
margin_right = 90.0
margin_bottom = 68.0
rect_min_size = Vector2( 90, 20 )

[node name="RichTextLabel" type="Label" parent="VBoxContainer/HBoxContainer2/Row2/Upgrade6"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 3.0
margin_top = 3.0
margin_right = -3.0
margin_bottom = -3.0
align = 1
valign = 1

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -5.0
autoplay = true
bus = "Music"

[connection signal="focus_entered" from="VBoxContainer/HBoxContainer/Button1" to="." method="_on_Button1_focus_entered"]
[connection signal="focus_exited" from="VBoxContainer/HBoxContainer/Button1" to="." method="_on_Button1_focus_exited"]
[connection signal="mouse_entered" from="VBoxContainer/HBoxContainer/Button1" to="." method="_on_Button1_mouse_entered"]
[connection signal="mouse_exited" from="VBoxContainer/HBoxContainer/Button1" to="." method="_on_Button1_mouse_exited"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Button1" to="." method="_on_Button1_pressed"]
[connection signal="focus_entered" from="VBoxContainer/HBoxContainer/Button2" to="." method="_on_Button2_focus_entered"]
[connection signal="focus_exited" from="VBoxContainer/HBoxContainer/Button2" to="." method="_on_Button2_focus_exited"]
[connection signal="mouse_entered" from="VBoxContainer/HBoxContainer/Button2" to="." method="_on_Button2_mouse_entered"]
[connection signal="mouse_exited" from="VBoxContainer/HBoxContainer/Button2" to="." method="_on_Button2_mouse_exited"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Button2" to="." method="_on_Button2_pressed"]
[connection signal="focus_entered" from="VBoxContainer/HBoxContainer/Button3" to="." method="_on_Button3_focus_entered"]
[connection signal="focus_exited" from="VBoxContainer/HBoxContainer/Button3" to="." method="_on_Button3_focus_exited"]
[connection signal="mouse_entered" from="VBoxContainer/HBoxContainer/Button3" to="." method="_on_Button3_mouse_entered"]
[connection signal="mouse_exited" from="VBoxContainer/HBoxContainer/Button3" to="." method="_on_Button3_mouse_exited"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Button3" to="." method="_on_Button3_pressed"]
